[package]
name = "SpaceTraders"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
dotenv = "0.15.0"
rand = "0.8.5"
reqwest = {version ="0.12.4", features =["json"]}
serde = {version ="1.0.202", features = ["derive"]}
serde_json = "1.0.117"
tokio = {version ="1.37.0", features =["full"]}
